--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://nirajann.github.io/Portfolio",
-  "name": "portfolio",
+  "name": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
