--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nirajann.github.io/Portfolio",
+  "homepage": "https://www.nirajangautam.com.np",
   "name": "/",
   "version": "0.1.0",
   "private": true,
