--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "homepage": "https://www.nirajangautam.com.np",
-  "name": "/",
+  "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/fontawesome-free": "^6.5.2",
