--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "portfolio Of Nirajan Gautam",
   "main": "index.js",
   "author": "",
   "license": "ISC",
